1. login and signup done 2. TODO: fix vertical align blur

--- a/public/css/project.css
+++ b/public/css/project.css
@@ -178,29 +178,66 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+}
+
+#auth-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%) translateZ(0);
+  background-color: white;
   text-align: center;
-}
-
-.firebaseui-container {
   border-radius: 3px;
-  height: 100%;
-  padding: 5px 0;
-  min-width: 240px;
 }
 
-#firebaseui-auth-container {
+#loginIntro {
+  width: 320px;
+  height: 270px;
+}
+
+#loginIntro > .mdl-card__title {
+  color: white;
+  background-image: url("../img/intro.jpg");
+  background-size: cover;
+}
+
+.mdl-card__menu {
+  top: 0;
+  right: 0;
+}
+
+.mdl-card__menu > a {
+  color: rgba(0, 0, 0, 0.36);
+}
+
+.font.B {
+  font-weight: bold;
+}
+
+#loginIntro,
+#loginDialog,
+#signupDialog,
+#signupConfirm {
+  transform: perspective(1px);
+}
+
+#confirmDimer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+#signupConfirm {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
-  background-color: white;
-  border-radius: 3px !important;
+  border-radius: 3px;
 }
 
-.topRight {
-  color: rgba(0, 0, 0, 0.89);
-  position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 2;
+.mdl-card__supporting-text {
+  text-align: left;
 }
